# LlamaBot

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
assets/vectorestores/chroma/: chroma.sqlite3
