[tool.poetry]
name = "llamaindex-slackbot"
version = "0.1.0"
description = ""
authors = ["Laurie Voss <github@seldo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
chromadb = "0.3.*"
llama-index = "0.9.48"
python-dotenv = "1.0.1"
slack-bolt = "1.18.1"
flask = "3.0.3"
qdrant-client = "^1.7.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
